--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dartz-web",
+  "name": "dartz-front-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "v8": "^0.1.0",
+    "v8-profiler-next": "^1.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
