--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "dartz-front-web",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "10.2.4",
+    "node": "20.11.1"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.5",
