--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.7",
     "bootstrap": "^4.6.0",
     "formik": "^2.4.5",
@@ -19,21 +20,21 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "^5.0.1",
     "react-super-responsive-table": "^5.2.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.7.4",
     "svgo": "^3.2.0",
+    "vite": "^5.1.6",
+    "vite-tsconfig-paths": "^4.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
