--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "preview-app": "vite preview"
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -53,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.72.0"
   }
 }
